syntax = "proto3";

package system.v1;

option go_package = "./;protos";

message GetSystemInfoRequest {}

message GetSystemInfoResponse {
  string id = 1;
  string name = 2;
  string server_version = 3;
  string kernel_version = 4;
  string operating_system = 5;
  string architecture = 6;
  int32 n_cpu = 7;
  int64 mem_total = 8;
  int32 containers = 9;
  int32 containers_running = 10;
  int32 containers_paused = 11;
  int32 containers_stopped = 12;
  int32 images = 13;
  string driver = 14;
  repeated string labels = 15;
}

message GetDiskUsageRequest {}

message DiskUsageImage {
  string id = 1;
  repeated string repo_tags = 2;
  int64 size = 3;
  int64 containers = 4;
}

message DiskUsageContainer {
  string id = 1;
  string image = 2;
  string state = 3;
  string status = 4;
  int64 size_rw = 5;
}

message DiskUsageVolume {
  string name = 1;
  string mountpoint = 2;
  int64 size = 3;
}

message GetDiskUsageResponse {
  int64 layers_size = 1;
  repeated DiskUsageImage images = 2;
  repeated DiskUsageContainer containers = 3;
  repeated DiskUsageVolume volumes = 4;
}

service SystemService {
  rpc GetSystemInfo(GetSystemInfoRequest) returns (GetSystemInfoResponse);
  rpc GetDiskUsage(GetDiskUsageRequest) returns (GetDiskUsageResponse);
}